language/move-lang/tests/move_check/translated_ir_tests/generics/instantiation_loops/mutually_recursive_two_args_swapping_type_con.move
module M {
    struct S<T> { b: bool }

    fun f<T1, T2, T3>() {
        g<T2, T1>()
    }

    fun g<T1, T2>() {
        f<T1, S<T2>, u64>()
    }
}
